removed ROI Stroke