@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2013 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2014 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -47,15 +47,15 @@ import loci.formats.tiff.TiffParser;
 import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.Timestamp;
 
+import ome.units.quantity.Length;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
+
 import org.xml.sax.Attributes;
 
 /**
  * FEITiffReader is the file format reader for TIFF files produced by various
  * FEI software.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/FEITiffReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/FEITiffReader.java;hb=HEAD">Gitweb</a></dd></dl>
  */
 public class FEITiffReader extends BaseTiffReader {
 
@@ -74,7 +74,7 @@ public class FEITiffReader extends BaseTiffReader {
   private String date;
   private String userName;
   private String microscopeModel;
-  private Double stageX, stageY, stageZ;
+  private Length stageX, stageY, stageZ;
   private Double sizeX, sizeY, timeIncrement;
   private ArrayList<String> detectors;
   private Double magnification;
@@ -90,6 +90,7 @@ public class FEITiffReader extends BaseTiffReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream) */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     TiffParser tp = new TiffParser(stream);
     IFD ifd = tp.getFirstIFD();
@@ -98,6 +99,7 @@ public class FEITiffReader extends BaseTiffReader {
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (!fileOnly) {
@@ -116,6 +118,7 @@ public class FEITiffReader extends BaseTiffReader {
   // -- Internal BaseTiffReader API methods --
 
   /* @see BaseTiffReader#initStandardMetadata() */
+  @Override
   protected void initStandardMetadata() throws FormatException, IOException {
     super.initStandardMetadata();
 
@@ -164,24 +167,30 @@ public class FEITiffReader extends BaseTiffReader {
             IniTable stageTable = ini.getTable("Stage");
 
             if (beamX != null) {
-              stageX = new Double(beamX);
+              final Double number = Double.valueOf(beamX);
+              stageX = new Length(number, UNITS.REFERENCEFRAME);
             }
             else if (stageTable != null) {
-              stageX = new Double(stageTable.get("StageX"));
+              final Double number = Double.valueOf(stageTable.get("StageX"));
+              stageX = new Length(number, UNITS.REFERENCEFRAME);
             }
 
             if (beamY != null) {
-              stageY = new Double(beamY);
+              final Double number = Double.valueOf(beamY);
+              stageY = new Length(number, UNITS.REFERENCEFRAME);
             }
             else if (stageTable != null) {
-              stageY = new Double(stageTable.get("StageY"));
+              final Double number = Double.valueOf(stageTable.get("StageY"));
+              stageY = new Length(number, UNITS.REFERENCEFRAME);
             }
 
             if (beamZ != null) {
-              stageZ = new Double(beamZ);
+              final Double number = Double.valueOf(beamZ);
+              stageZ = new Length(number, UNITS.REFERENCEFRAME);
             }
             else if (stageTable != null) {
-              stageZ = new Double(stageTable.get("StageZ"));
+              final Double number = Double.valueOf(stageTable.get("StageZ"));
+              stageZ = new Length(number, UNITS.REFERENCEFRAME);
             }
           }
 
@@ -202,8 +211,10 @@ public class FEITiffReader extends BaseTiffReader {
         sizeY = new Double(magnification) * MAG_MULTIPLIER;
 
         IniTable scanTable = ini.getTable("Vector.Sysscan");
-        stageX = new Double(scanTable.get("PositionX"));
-        stageY = new Double(scanTable.get("PositionY"));
+        final Double posX = Double.valueOf(scanTable.get("PositionX"));
+        final Double posY = Double.valueOf(scanTable.get("PositionY"));
+        stageX = new Length(posX, UNITS.REFERENCEFRAME);
+        stageY = new Length(posY, UNITS.REFERENCEFRAME);
 
         IniTable detectorTable = ini.getTable("Vector.Video.Detectors");
         int detectorCount =
@@ -223,6 +234,7 @@ public class FEITiffReader extends BaseTiffReader {
   }
 
   /* @see BaseTiffReader#initMetadataStore() */
+  @Override
   protected void initMetadataStore() throws FormatException {
     super.initMetadataStore();
     MetadataStore store = makeFilterMetadata();
@@ -277,8 +289,8 @@ public class FEITiffReader extends BaseTiffReader {
       store.setStageLabelZ(stageZ, 0);
       store.setStageLabelName("", 0);
 
-      PositiveFloat physicalSizeX = FormatTools.getPhysicalSizeX(sizeX);
-      PositiveFloat physicalSizeY = FormatTools.getPhysicalSizeY(sizeY);
+      Length physicalSizeX = FormatTools.getPhysicalSizeX(sizeX);
+      Length physicalSizeY = FormatTools.getPhysicalSizeY(sizeY);
 
       if (physicalSizeX != null) {
         store.setPixelsPhysicalSizeX(physicalSizeX, 0);
@@ -286,7 +298,9 @@ public class FEITiffReader extends BaseTiffReader {
       if (physicalSizeY != null) {
         store.setPixelsPhysicalSizeY(physicalSizeY, 0);
       }
-      store.setPixelsTimeIncrement(timeIncrement, 0);
+      if (timeIncrement != null) {
+        store.setPixelsTimeIncrement(new Time(timeIncrement, UNITS.S), 0);
+      }
     }
   }
 
@@ -298,6 +312,7 @@ public class FEITiffReader extends BaseTiffReader {
 
     // -- DefaultHandler API methods --
 
+    @Override
     public void characters(char[] data, int start, int len) {
       if (qName.equals("Label")) {
         key = new String(data, start, len);
@@ -311,13 +326,16 @@ public class FEITiffReader extends BaseTiffReader {
         addGlobalMeta(key, value);
 
         if (key.equals("Stage X")) {
-          stageX = new Double(value);
+          final Double number = Double.valueOf(value);
+          stageX = new Length(number, UNITS.REFERENCEFRAME);
         }
         else if (key.equals("Stage Y")) {
-          stageY = new Double(value);
+          final Double number = Double.valueOf(value);
+          stageY = new Length(number, UNITS.REFERENCEFRAME);
         }
         else if (key.equals("Stage Z")) {
-          stageZ = new Double(value);
+          final Double number = Double.valueOf(value);
+          stageZ = new Length(number, UNITS.REFERENCEFRAME);
         }
         else if (key.equals("Microscope")) {
           microscopeModel = value;
@@ -331,6 +349,7 @@ public class FEITiffReader extends BaseTiffReader {
       }
     }
 
+    @Override
     public void startElement(String uri, String localName, String qName,
       Attributes attributes)
     {
