@@ -38,19 +38,16 @@ import loci.formats.FormatTools;
 import loci.formats.MetadataTools;
 import loci.formats.meta.MetadataStore;
 
+import ome.units.UNITS;
+import ome.units.quantity.Length;
 import ome.xml.model.primitives.NonNegativeInteger;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.xml.sax.Attributes;
 
 /**
  * DefaultHandler implementation for handling XML produced by Nikon Elements.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/ND2Handler.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/ND2Handler.java;hb=HEAD">Gitweb</a></dd></dl>
  */
 public class ND2Handler extends BaseHandler {
 
@@ -93,9 +90,9 @@ public class ND2Handler extends BaseHandler {
   private ArrayList<Integer> power = new ArrayList<Integer>();
   private ArrayList<Hashtable<String, String>> rois =
     new ArrayList<Hashtable<String, String>>();
-  private ArrayList<Double> posX = new ArrayList<Double>();
-  private ArrayList<Double> posY = new ArrayList<Double>();
-  private ArrayList<Double> posZ = new ArrayList<Double>();
+  private ArrayList<Length> posX = new ArrayList<Length>();
+  private ArrayList<Length> posY = new ArrayList<Length>();
+  private ArrayList<Length> posZ = new ArrayList<Length>();
   private ArrayList<String> posNames = new ArrayList<String>();
 
   private String cameraModel;
@@ -153,10 +150,11 @@ public class ND2Handler extends BaseHandler {
 
         int fontSize = Integer.parseInt(roi.get("fHeight"));
         if (fontSize >= 0) {
-          store.setLabelFontSize(new NonNegativeInteger(fontSize), r, 0);
+          store.setLabelFontSize(new Length(fontSize, UNITS.PT), r, 0);
         }
         store.setLabelText(roi.get("eval-text"), r, 0);
-        store.setLabelStrokeWidth(new Double(roi.get("line-width")), r, 0);
+        Length l = new Length(new Double(roi.get("line-width")), UNITS.PIXEL);
+        store.setLabelStrokeWidth(l, r, 0);
 
         String rectangle = roi.get("rectangle");
         String[] p = rectangle.split(",");
@@ -310,15 +308,15 @@ public class ND2Handler extends BaseHandler {
     return rois;
   }
 
-  public ArrayList<Double> getXPositions() {
+  public ArrayList<Length> getXPositions() {
     return posX;
   }
 
-  public ArrayList<Double> getYPositions() {
+  public ArrayList<Length> getYPositions() {
     return posY;
   }
 
-  public ArrayList<Double> getZPositions() {
+  public ArrayList<Length> getZPositions() {
     return posZ;
   }
 
@@ -351,6 +349,7 @@ public class ND2Handler extends BaseHandler {
     }
   }
 
+  @Override
   public void startElement(String uri, String localName, String qName,
     Attributes attributes)
   {
@@ -511,15 +510,18 @@ public class ND2Handler extends BaseHandler {
         }
       }
       else if ("dPosX".equals(prevElement) && qName.startsWith("item_")) {
-        posX.add(new Double(DataTools.sanitizeDouble(value)));
+        final Double number = Double.valueOf(DataTools.sanitizeDouble(value));
+        posX.add(new Length(number, UNITS.REFERENCEFRAME));
         metadata.put("X position for position #" + posX.size(), value);
       }
       else if ("dPosY".equals(prevElement) && qName.startsWith("item_")) {
-        posY.add(new Double(DataTools.sanitizeDouble(value)));
+        final Double number = Double.valueOf(DataTools.sanitizeDouble(value));
+        posY.add(new Length(number, UNITS.REFERENCEFRAME));
         metadata.put("Y position for position #" + posY.size(), value);
       }
       else if ("dPosZ".equals(prevElement) && qName.startsWith("item_")) {
-        posZ.add(new Double(DataTools.sanitizeDouble(value)));
+        final Double number = Double.valueOf(DataTools.sanitizeDouble(value));
+        posZ.add(new Length(number, UNITS.REFERENCEFRAME));
         metadata.put("Z position for position #" + posZ.size(), value);
       }
       else if (qName.startsWith("item_")) {
@@ -618,6 +620,7 @@ public class ND2Handler extends BaseHandler {
     prevRuntype = attributes.getValue("runtype");
   }
 
+  @Override
   public void endDocument() {
     for (String name : colors.keySet()) {
       String chName = dyes.get(name);
